fix spacing on notification

--- a/static/css/styleNew.css
+++ b/static/css/styleNew.css
@@ -737,7 +737,7 @@ transition: font-size 0.3s ease;}
 }
           
           
-          div.parallax div#calendar #contentright div#notifications {
+          div.parallax div#create #contentright div#notifications {
             margin-left:auto;
             margin-right:auto;
     width: 300px;
